#pragma once
class Combate
{
private:
    /* data */
public:
    Combate(/* args */) {}
    ~Combate() {}
};