#pragma once
class Fatality
{
private:
    /* data */
public:
    Fatality(/* args */) {}
    ~Fatality() {}
};