#pragma once
class Menu
{
private:
    /* data */
public:
    Menu(/* args */) {}
    ~Menu() {}
};